--- a/view/index.haml
+++ b/view/index.haml
@@ -1,5 +1,12 @@
 !!!
 %html
   %body
-    %h1 Hola
+    %h1 Group listing
+    - if @groups
+      - @groups.each do |group|
+        .group
+          .group_name=group.name
+          .group_description=group.description
+    - else
+      No groups found
 
