Added a bit of css and links to groups

--- a/view/index.haml
+++ b/view/index.haml
@@ -3,7 +3,8 @@
 - if @groups
   - @groups.each do |group|
     .group
-      .group_name=group.name
+      .group_name
+        %a{:href => group.link}=group.name
       .group_description=group.description
 - else
   No groups found
